# sql-sop

./: .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  Justfile  README.md  ROADMAP.md  action.yml  codecov.yml  index.html  pyproject.toml  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: adr.yml  bug_report.yml  config.yml  feature_request.yml  rule-request.yml
.github/workflows/: ci.yml  pr_title.yml  prsop.yml  release-please.yml  release.yml  welcome.yml
playground/: index.html
scripts/: scaffold_rule.py
sql_guard/: checker.py  cli.py  config.py  contracts.py  dbt.py  fluent.py  git_filter.py  inline_disable.py  python_scanner.py  snapshot.py
sql_guard/reporters/: sarif.py
sql_guard/rules/: __init__.py  base.py  contracts.py  dbt.py  errors.py  python_rules.py  structural.py  tsql.py  warnings.py
tests/: test_config.py  test_contracts.py  test_dbt_discovery.py  test_dbt_rules.py  test_fluent.py  test_git_filter.py  test_inline_disable.py  test_new_rules.py  test_python_scanner.py  test_rules.py  test_sarif.py  test_structural.py  test_tsql.py
tests/fixtures/: assertions.sql  contract_drift.sql  contract_sample.yml  errors.sql  python_hazards.py  warnings.sql
tests/fixtures/dbt_project/: dbt_project.yml
tests/fixtures/dbt_project/models/marts/: schema.yml
tests/fixtures/dbt_project/models/staging/: schema.yml
