[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-sop"
version = "0.6.2"
description = "Fast rule-based SQL linter. Pre-commit hook + GitHub Action + CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Pawan Singh Kapkoti" }]
keywords = ["sql", "linter", "pre-commit", "github-action", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "sqlparse>=0.5.0",
    "pyyaml>=6.0",
]

[project.scripts]
sql-sop = "sql_guard.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "libcst>=1.1.0", "sqlalchemy>=2.0"]
# Kept as a no-op extra for backwards-compat with `pip install "sql-sop[structural]"`
# in existing requirements files; sqlparse is now a core dependency.
structural = []
python = ["libcst>=1.1.0"]
# `schema-snapshot` introspects a live database via SQLAlchemy.
snapshot = ["sqlalchemy>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["sql_guard"]

[tool.ruff]
line-length = 100
